# iims-ai

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
artifacts/models/: model_CatBoost.joblib
data/datasets/: enhanced_synthetic_sales_data.csv
src/: app.py
src/api/: endpoints.py
src/core/: config.py
src/data/: analysis.py  generation.py  main.py
src/schemas/: prediction.py
src/service/: feature_engineering.py  model.py
src/training/: model_training.py
